updating for fra and profile
Made-with: Cursor